Testing what happens when I add buttons to the types

--- a/css/main.css
+++ b/css/main.css
@@ -524,9 +524,6 @@ Describes button text/image positions (using a paragraph block)
 	background-color:#2E733A;
 	background-image: url("/img/noise.png");
 	cursor:pointer;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
 
 	/*Disable user interaction*/
 	-webkit-touch-callout: none;
@@ -540,9 +537,6 @@ Describes button text/image positions (using a paragraph block)
 .simplebutton{
 	box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.3), inset 0px 1px 0px 0px rgba(149, 227, 118,0.3);
 	cursor:pointer;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
 }
 
 /* Button has round top */
@@ -553,15 +547,30 @@ Describes button text/image positions (using a paragraph block)
 	-moz-border-radius-bottomleft: 0px;
 	border-bottom-right-radius: 0px;
 	border-bottom-left-radius: 0px;
+
+	-webkit-border-top-left-radius: 4px;
+	-webkit-border-top-right-radius: 4px;
+	-moz-border-radius-topleft: 4px;
+	-moz-border-radius-topright: 4px;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
 }
 /* Button has round bottom */
 .button.roundBottom, .simplebutton.roundBottom{
+	-webkit-border-bottom-right-radius: 4px;
+	-webkit-border-bottom-left-radius: 4px;
+	-moz-border-radius-bottomright: 4px;
+	-moz-border-radius-bottomleft: 4px;
+	border-bottom-right-radius: 4px;
+	border-bottom-left-radius: 4px;
+
 	-webkit-border-top-left-radius: 0px;
 	-webkit-border-top-right-radius: 0px;
 	-moz-border-radius-topleft: 0px;
 	-moz-border-radius-topright: 0px;
 	border-top-left-radius: 0px;
 	border-top-right-radius: 0px;
+
 }
 /* Button has round right side */
 .button.roundRight, .simplebutton.roundRight{
@@ -571,9 +580,23 @@ Describes button text/image positions (using a paragraph block)
 	-moz-border-radius-bottomleft: 0px;
 	border-top-left-radius: 0px;
 	border-bottom-left-radius: 0px;
+
+	-webkit-border-top-right-radius: 4px;
+	-webkit-border-bottom-right-radius: 4px;
+	-moz-border-radius-topright: 4px;
+	-moz-border-radius-bottomright: 4px;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
 }
 /* Button has round left side */
 .button.roundLeft, .simplebutton.roundLeft{
+	-webkit-border-top-left-radius: 4px;
+	-webkit-border-bottom-left-radius: 4px;
+	-moz-border-radius-topleft: 4px;
+	-moz-border-radius-bottomleft: 4px;
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+
 	-webkit-border-top-right-radius: 0px;
 	-webkit-border-bottom-right-radius: 0px;
 	-moz-border-radius-topright: 0px;
