Testing what happens when I add buttons to the types

--- a/css/main.css
+++ b/css/main.css
@@ -535,7 +535,10 @@ Describes button text/image positions (using a paragraph block)
 }
 
 .simplebutton{
-	box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.3), inset 0px 1px 0px 0px rgba(149, 227, 118,0.3);
+	box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.3), 
+		1px 0px 0px 0px rgba(0,0,0,0.3),
+		-1px 0px 0px 0px rgba(0,0,0,0.3), 
+		inset 0px 1px 0px 0px rgba(149, 227, 118,0.3);
 	cursor:pointer;
 }
 
