Testing what happens when I add buttons to the types

--- a/css/main.css
+++ b/css/main.css
@@ -727,6 +727,8 @@ Describes button text/image positions (using a paragraph block)
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+}
+.page-select .typeInfoButton {
 	box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.3),
 		1px 0px 0px 0px rgba(0,0,0,0.3), 
 		-1px 0px 0px 0px rgba(0,0,0,0.3), 
