--- a/css/main.css
+++ b/css/main.css
@@ -695,7 +695,7 @@ Describes button text/image positions (using a paragraph block)
 		inset 0px 1px 0px 0px rgba(149, 227, 118,0.3);
 }
 .page-select .typeCheckbox {
-	width: 32px;
+	width: 42px;
 	height:30px;
 	background-size: 16px 16px;
 	background-position: 16px 16px;
@@ -704,7 +704,7 @@ Describes button text/image positions (using a paragraph block)
 .page-select input[type='checkbox']:checked {
     background-image: url(/img/checkyes.png);
 }
-.page-select input[type='checkbox']:checked {
+.page-select input[type='checkbox'] {
     background-image: url(/img/checkno.png);
 }
 .page-select .typeName {
