--- a/css/main.css
+++ b/css/main.css
@@ -698,8 +698,8 @@ Describes button text/image positions (using a paragraph block)
 	width: 32px;
 	height:42px;
 	background-size: 16px 16px;
-	background-position: 16px 16px;
-	background-repeat: no-repeat;
+	/*background-position: 0px 0px;
+	background-repeat: no-repeat;*/
 }
 .page-select .typeCheckbox[type='checkbox']:checked{
 	opacity: 100;
