--- a/css/main.css
+++ b/css/main.css
@@ -712,18 +712,14 @@ input[type=checkbox] {
   input[type=checkbox] + label
    {
        background: #999;
-       height: 16px;
-       width: 16px;
-       display:inline-block;
+       /*:inline-block;*/
        padding: 0 0 0 0px;
    }
    
    input[type=checkbox]:checked + label
     {
         background: #0080FF;
-        height: 16px;
-        width: 16px;
-        display:inline-block;
+        /*display:inline-block;*/
         padding: 0 0 0 0px;
 }
 
