--- a/css/main.css
+++ b/css/main.css
@@ -737,9 +737,9 @@ Describes button text/image positions (using a paragraph block)
 	border-top-right-radius: 0px;
 	border-bottom-right-radius: 0px;
 
-	background-image: url(/img/checkyes.png);
+	background-image: url(/img/checkno.png);
 	background-size: 16px 16px;
-	background-position: 4px 10px;
+	background-position: 6px 12px;
 	background-repeat: no-repeat;
 }
    
