--- a/css/main.css
+++ b/css/main.css
@@ -694,19 +694,14 @@ Describes button text/image positions (using a paragraph block)
 		inset 0px 1px 0px 0px rgba(149, 227, 118,0.3);
 }*/
 .page-select .typeCheckbox {
-	/*float: left;
-	width:32px;
-	height:42px;
-	margin-left:10px;
-	box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.3), 
-		-1px 0px 0px 0px rgba(0,0,0,0.3), 
-		inset 0px 1px 0px 0px rgba(149, 227, 118,0.3);*/
-	/*background-position: 0px 0px;
-	background-repeat: no-repeat;*/
+	box-shadow: -1px 0px 0px 0px rgba(0,0,0,0.3), 
 }
 
 .page-select input[type=checkbox] {
     display:none;
+    box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.3), 
+		-1px 0px 0px 0px rgba(0,0,0,0.3), 
+		inset 0px 1px 0px 0px rgba(149, 227, 118,0.3);
   }
 
 .page-select input[type=checkbox] + label{
@@ -714,6 +709,7 @@ Describes button text/image positions (using a paragraph block)
 	width:226px;
 	height:22px;
 	cursor:pointer;
+	margin-left: 10px;
 	padding-left: 32px;
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -739,7 +735,7 @@ Describes button text/image positions (using a paragraph block)
 
 	background-image: url(/img/checkno.png);
 	background-size: 16px 16px;
-	background-position: 6px 12px;
+	background-position: 8px 12px;
 	background-repeat: no-repeat;
 }
    
