--- a/css/main.css
+++ b/css/main.css
@@ -693,46 +693,26 @@ Describes button text/image positions (using a paragraph block)
 		-1px 0px 0px 0px rgba(0,0,0,0.3), 
 		inset 0px 1px 0px 0px rgba(149, 227, 118,0.3);
 }*/
-.page-select .typeCheckbox {
-	box-shadow: -1px 0px 0px 0px rgba(0,0,0,0.3), 
-}
-
-.page-select input[type=checkbox] {
-    display:none;
-    box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.3), 
-		-1px 0px 0px 0px rgba(0,0,0,0.3), 
-		inset 0px 1px 0px 0px rgba(149, 227, 118,0.3);
-  }
-
-.page-select input[type=checkbox] + label{
+.page-select .typeCheckboxItem {
 	float: left;
+	margin-left: 10px;
 	width:226px;
 	height:22px;
 	cursor:pointer;
-	margin-left: 10px;
 	padding-left: 32px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	text-align:left;
-
-	box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.3), 
+    box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.3), 
 		-1px 0px 0px 0px rgba(0,0,0,0.3), 
 		inset 0px 1px 0px 0px rgba(149, 227, 118,0.3);
+}
 
-	-webkit-border-top-left-radius: 4px;
-	-webkit-border-bottom-left-radius: 4px;
-	-moz-border-radius-topleft: 4px;
-	-moz-border-radius-bottomleft: 4px;
-	border-top-left-radius: 4px;
-	border-bottom-left-radius: 4px;
+.page-select input[type=checkbox] {
+    display:none;
+  }
 
-	-webkit-border-top-right-radius: 0px;
-	-webkit-border-bottom-right-radius: 0px;
-	-moz-border-radius-topright: 0px;
-	-moz-border-radius-bottomright: 0px;
-	border-top-right-radius: 0px;
-	border-bottom-right-radius: 0px;
-
+.page-select input[type=checkbox] + label{
 	background-image: url(/img/checkno.png);
 	background-size: 16px 16px;
 	background-position: 8px 12px;
