--- a/css/main.css
+++ b/css/main.css
@@ -220,20 +220,42 @@ textarea {
 	padding-bottom:50px;
 }
 
-.page-select #info {
+.page-select #Info {
+	display:none;
 	font-style:italic;
-	margin:10px;
+	margin:30px;
 	text-align: center;
 }
 
-.page-select #searchButton {
+.page-select #Alert {
+	position: relative;
+	top:10px;
+	left:10px;
+	width: 300px;
+	box-shadow: 0px 0px 0px 20px #000;
+}
+
+.page-select #Cancel {
+	float: left;
+	width:300px;
+	margin:10px;
+	height:50px;
+}
+.page-select #Ok {
 	float: left;
 	width:300px;
 	margin:10px;
 	height:50px;
 }
 
-.page-select #searchButton p {
+.page-select #SearchButton {
+	float: left;
+	width:300px;
+	margin:10px;
+	height:50px;
+}
+
+.page-select #SearchButton p, .page-select #Cancel p, .page-select #Ok p {
 	padding-top: 14px;
 }
 
