--- a/css/main.css
+++ b/css/main.css
@@ -228,10 +228,13 @@ textarea {
 }
 
 .page-select #Alert {
+	visibility: hidden;
+	z-index: 100;
 	position: relative;
 	top:10px;
 	left:10px;
 	width: 300px;
+	background: #FFF;
 	box-shadow: 0px 0px 0px 20px #000;
 }
 
