--- a/css/main.css
+++ b/css/main.css
@@ -228,12 +228,16 @@ textarea {
 }
 
 .page-select #Alert {
-	z-index: 100;
-	position: relative;
+	position: fixed;
 	top:10px;
 	left:10px;
 	width: 300px;
+	width: 300px;
 	background: #FFF;
+	top: 50%;
+    left: 50%;
+    margin-left:-150px;
+    margin-top:-150px;  
 	box-shadow: 0px 0px 0px 20px #000;
 }
 
