--- a/css/main.css
+++ b/css/main.css
@@ -216,7 +216,7 @@ textarea {
 	margin:0 auto;
 	font-family: Helvetica, Sans-Serif;
 	color:#D2FFB4;
-	text-shadow: 0px -1px #000;	
+	text-shadow: 0px -1px #000;
 	padding-bottom:50px;
 }
 
@@ -229,28 +229,29 @@ textarea {
 
 .page-select #Alert {
 	position: fixed;
-	top:10px;
-	left:10px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
 	width: 300px;
-	width: 300px;
-	background: #FFF;
+	height: 300px;
+	background: #276332;
+	padding:10px;
 	top: 50%;
     left: 50%;
     margin-left:-150px;
     margin-top:-150px;  
-	box-shadow: 0px 0px 0px 20px #000;
+	box-shadow: 0px 0px 20px #000;
 }
 
 .page-select #Cancel {
 	float: left;
-	width:300px;
-	margin:10px;
+	width:135px;
+	margin-left:10px;
 	height:50px;
 }
 .page-select #Ok {
 	float: left;
-	width:300px;
-	margin:10px;
+	width:135;
 	height:50px;
 }
 
