--- a/css/main.css
+++ b/css/main.css
@@ -227,30 +227,30 @@ textarea {
 	text-align: center;
 }
 
-.page-select #Alert {
+.page-select #Confirm {
 	position: fixed;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
 	width: 280px;
-	height: 180px;
+	height: 210px;
 	background: #276332;
 	padding:10px;
 	top: 50%;
     left: 50%;
     margin-left:-150px;
-    margin-top:-90px;  
+    margin-top:-105px;  
 	box-shadow: 0px 0px 20px #000;
 }
 
-.page-select #Cancel, .page-select #Ok {
+.page-select #Cancel, .page-select #Ok, .page-select #Continue {
 	position:absolute;
 	bottom: 10px;
 	width:135px;
 	height:50px;
 }
 .page-select #Cancel {left: 10px;}
-.page-select #Ok {right:10px;}
+.page-select #Ok, .page-select #Continue {right:10px;}
 .page-select #SearchButton {
 	float: left;
 	width:300px;
