--- a/css/main.css
+++ b/css/main.css
@@ -742,8 +742,15 @@ Describes button text/image positions (using a paragraph block)
     display:none;
 }
 .page-select input[type=checkbox] + label{
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 	padding-left: 32px;
 	height:22px;
+	cursor:pointer;
 
 	background-image: url(/img/checkno.png);
 	background-size: 16px 16px;
