--- a/css/main.css
+++ b/css/main.css
@@ -243,7 +243,7 @@ textarea {
     left: 50%;
     margin-left:-150px;
     margin-top:-105px;  
-	box-shadow: 0px 0px 100px #000, 0px 0px 100px #000, 0px 0px 100px #000, 0px 0px 100px #000;
+	box-shadow: 0px 0px 100px #000;
 }
 
 .page-select #Cancel, .page-select #Ok, .page-select #Continue {
@@ -278,7 +278,7 @@ textarea {
 	height:32px;
 	width:32px;
 	left:4px;
-	top:-17px;
+	top:0px;
 	background-image: url('/img/loading.gif');
 	background-size: 100%;
 }
