--- a/css/main.css
+++ b/css/main.css
@@ -444,6 +444,10 @@ Describes button text/image positions (using a paragraph block)
 	color:#D2FFB4;
 	text-decoration:none;
 }
+.page-info .category a, .page-info .category a:hover, .page-info .category a:visited{
+	color:#D2FFB4;
+	text-decoration:underline;
+}
 .page-info .categoryToggle {
 
 }
