--- a/css/main.css
+++ b/css/main.css
@@ -444,6 +444,11 @@ Describes button text/image positions (using a paragraph block)
 	color:#D2FFB4;
 	text-decoration:none;
 }
+.page-info .phonetitle:after {
+	text-decoration: none;
+	color:#A2CF84;
+	content: " (Click to Call) ";
+}
 .page-info .phone a, .page-info .phone a:hover, .page-info .phone a:visited{
 	color:#D2FFB4;
 	text-decoration:none;
