We (Andrew.M) have changed the the main activity to the MapView. We have played around with overlays, such as the marker over Mexico City. And we have added a smll button as well using RelativeLayout.

--- a/android-native/res/layout/map.xml
+++ b/android-native/res/layout/map.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.maps.MapView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/map"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:clickable="true"
-    android:apiKey="0CxAMuHzOGiZHm8-scNKZ0_lbFtJr8zOgdXWGMQ"
-/>
-<!-- android:apiKey="0pAq1GlThPS-aSaYugzyXkqRuMgXsxLQ5RgEy4A" -->
+<RelativeLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent">
+	<!-- google maps api key, located in strings.xml -->
+	<com.google.android.maps.MapView
+	    xmlns:android="http://schemas.android.com/apk/res/android"
+	    android:id="@+id/map"
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    android:clickable="true"
+	    android:apiKey="@string/api_key"/>
+	<Button android:id="@+id/googlemaps_select_location"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_alignParentBottom="true"
+	            android:layout_centerHorizontal="true"
+	            android:text="Select"/>
+</RelativeLayout>
