--- a/css/main.css
+++ b/css/main.css
@@ -905,5 +905,8 @@ Describes button text/image positions (using a paragraph block)
 	width: 90%;
 	height: 600px;
 	margin: 100px auto;
+	padding: 50px;
+	background-color: #FFF;
+	color: #000;
 	overflow: auto;
 }
