added recycle images to cluster icons, text etc

--- a/css/main.css
+++ b/css/main.css
@@ -310,6 +310,16 @@ textarea {
 	color: #333;
 	text-decoration:underline;
 }
+.labels {
+	color: white;
+	background-color: red;
+	font-family: "Lucida Grande", "Arial", sans-serif;
+	font-size: 10px;
+	text-align: center;
+	width: 10px;     
+	white-space: nowrap;
+}
+
 
 /*
 
