added recycle images to cluster icons, text etc

--- a/css/main.css
+++ b/css/main.css
@@ -312,6 +312,7 @@ textarea {
 }
 .labels {
 	color: #D2FFB5;
+	font-family: "Lucida Grande", "Arial", sans-serif;
 	font-size: 18px;
 	text-align: center;
 	width: 50px;     
