--- a/css/main.css
+++ b/css/main.css
@@ -311,6 +311,7 @@ textarea {
 	text-decoration:underline;
 }
 .labels {
+	position: relative;
 	color: #D2FFB5;
 	font-size: 16px;
 	text-align: center;
