added recycle images to cluster icons, text etc

--- a/css/main.css
+++ b/css/main.css
@@ -315,6 +315,7 @@ textarea {
 	color: #D2FFB5;
 	font-size: 18px;
 	text-align: center;
+	width: 55px;     
 	white-space: nowrap;
 	z-index: 999;
 }
@@ -323,6 +324,7 @@ textarea {
 	color: #D2FFB5;
 	font-size: 16px;
 	text-align: center;
+	width: 45px;     
 	white-space: nowrap;
 	z-index: 999;
 }
@@ -331,6 +333,7 @@ textarea {
 	color: #000;
 	font-size: 14px;
 	text-align: center;
+	width: 35px;     
 	white-space: nowrap;
 	z-index: 999;
 }
