added recycle images to cluster icons, text etc

--- a/css/main.css
+++ b/css/main.css
@@ -318,7 +318,7 @@ textarea {
 	width: 55px;     
 	white-space: nowrap;
 	z-index: 999;
-	background-color: #777;
+	background-color: #000;
 }
 .label45{
 	position: relative;
@@ -328,7 +328,7 @@ textarea {
 	width: 45px;     
 	white-space: nowrap;
 	z-index: 999;
-	background-color: #777;
+	background-color: #000;
 }
 .label35{
 	position: relative;
@@ -338,7 +338,7 @@ textarea {
 	width: 35px;     
 	white-space: nowrap;
 	z-index: 999;
-	background-color: #777;
+	background-color: #FFF;
 }
 
 
