--- a/css/main.css
+++ b/css/main.css
@@ -318,6 +318,7 @@ textarea {
 	width: 55px;     
 	white-space: nowrap;
 	z-index: 100000;
+	font-weight: bold;
 }
 .label45{
 	position: relative;
@@ -327,6 +328,7 @@ textarea {
 	width: 45px;     
 	white-space: nowrap;
 	z-index: 100000;
+	font-weight: bold;
 }
 .label35{
 	position: relative;
@@ -336,6 +338,7 @@ textarea {
 	width: 35px;     
 	white-space: nowrap;
 	z-index: 100000;
+	font-weight: bold;
 }
 
 
